Only create TransferMultiSegKio for new transfers or stored transfers with factory information.

BUG: 311450 

svn path=/branches/KDE/4.9/kdenetwork/kget/; revision=1327894